k8s/guestbook-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: guestbook
  namespace: guestbook
  labels:
    app: guestbook
spec:
  ports:
  - port: 3000
    targetPort: http-server
  selector:
    app: guestbook
  type: ClusterIP
