k8s/redis-master-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis-master
  namespace: guestbook
  labels:
    app: redis
    role: master
spec:
  ports:
  - port: 6379
    targetPort: redis-server
  selector:
    app: redis
    role: master
