k8s/guestbook-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress
  namespace: guestbook
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  rules:
  - host: guestbook.julienglotain.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: guestbook
          servicePort: 3000
  tls:
    - secretName: guestbook.julienglotain.fr-tls
      hosts:
        - guestbook.julienglotain.fr
